# tracknetV4-padel

./: .gitignore  CLAUDE.md  README_Tracknet_V4.md  config.yaml  main.py  pyproject.toml  test.py  train.py
model/: tracknet_exp.py  tracknet_v2.py  tracknet_v4.py
preprocessing/: convert_padeltracker.py
utils/: metrics.py
